<resources>
    <string name="app_name">todo</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_me">记住密码</string>
    <string name="input">请输入内容</string>
    <string name="build">创建</string>
    <string name="note">笔记</string>
    <string name="date">日期</string>
    <string name="cancel">删除</string>
    <string name="change">更改</string>
</resources>