<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/et_main_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_main_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_main_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_main_login"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@id/btn_main_register"
        app:layout_constraintTop_toBottomOf="@+id/cb_main_remember" />

    <Button
        android:id="@+id/btn_main_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@id/btn_main_login"
        app:layout_constraintStart_toStartOf="@id/et_main_password"
        app:layout_constraintTop_toBottomOf="@+id/cb_main_remember" />

    <CheckBox
        android:id="@+id/cb_main_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="@id/et_main_password"
        app:layout_constraintTop_toBottomOf="@+id/et_main_password" />
</androidx.constraintlayout.widget.ConstraintLayout>